// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeBlock Component Base Render: baseRender 1`] = `
<TimeBlockCore
  column={1}
  endTime={200000}
  height={100}
  id="1"
  isTemp={false}
  left={20}
  realEndTime={200000}
  realStartTime={100000}
  startTime={100000}
  top={0}
  width={50}
>
  <div
    className="scheduler-time-block"
    id="timeBlock"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "backgroundColor": "common",
        "height": 100,
        "left": 20,
        "position": "absolute",
        "top": 0,
        "width": 50,
        "zIndex": 4,
      }
    }
  >
    <span
      className="scheduler-text scheduler-time-display"
      id="timeDisplay"
      style={
        Object {
          "pointerEvents": "none",
          "userSelect": "none",
        }
      }
    >
      00:01 / 00:03
    </span>
  </div>
</TimeBlockCore>
`;

exports[`TimeBlock Component End Time Test: display24Hour 1`] = `
<div
  className="scheduler-time-block"
  id="timeBlock"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  style={
    Object {
      "backgroundColor": "common",
      "height": 100,
      "left": 20,
      "position": "absolute",
      "top": 0,
      "width": 50,
      "zIndex": 4,
    }
  }
>
  <span
    className="scheduler-text scheduler-time-display"
    id="timeDisplay"
    style={
      Object {
        "pointerEvents": "none",
        "userSelect": "none",
      }
    }
  >
    00:01 / 24:00
  </span>
</div>
`;
